--- a/ebmRadio-ios/Base.lproj/Main.storyboard
+++ b/ebmRadio-ios/Base.lproj/Main.storyboard
@@ -3,24 +3,116 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Player View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="ebmRadio_ios" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="PlayerViewController" customModule="ebmRadio_ios" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nA4-eX-Aax">
+                                <rect key="frame" x="309" y="597" width="50" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="nA4-eX-Aax" secondAttribute="height" multiplier="1:1" id="gzj-Wp-WlY"/>
+                                    <constraint firstAttribute="width" constant="50" id="hdD-ME-V4C"/>
+                                </constraints>
+                                <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <state key="normal" image="Play-50">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="deutsch amerikanische freundschaft - der mussolini" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="idr-gu-mMj">
+                                <rect key="frame" x="16" y="235" width="343" height="76.5"/>
+                                <fontDescription key="fontDescription" type="system" weight="light" pointSize="32"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="uov-Mk-Pnz">
+                                <rect key="frame" x="14" y="561" width="347" height="31"/>
+                                <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="minimumTrackTintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="maximumTrackTintColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="thumbTintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </slider>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="320 kbps, streaming" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cAz-wW-7BY">
+                                <rect key="frame" x="16" y="611" width="273" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DnJ-fq-8kZ">
+                                <rect key="frame" x="163" y="40" width="48" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="DnJ-fq-8kZ" secondAttribute="height" multiplier="26:27" id="kes-80-F8F"/>
+                                    <constraint firstAttribute="height" constant="50" id="uYT-DZ-q7p"/>
+                                </constraints>
+                                <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <state key="normal" title="Button" image="EBM"/>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="DnJ-fq-8kZ" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="20" id="5IJ-h1-pQ6"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" relation="greaterThanOrEqual" secondItem="cAz-wW-7BY" secondAttribute="bottom" constant="20" id="7fH-vW-3f5"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="uov-Mk-Pnz" secondAttribute="bottom" constant="250" id="8Ho-Fg-w4U"/>
+                            <constraint firstItem="uov-Mk-Pnz" firstAttribute="leading" secondItem="idr-gu-mMj" secondAttribute="leading" id="BWt-kj-h2T"/>
+                            <constraint firstItem="cAz-wW-7BY" firstAttribute="top" secondItem="uov-Mk-Pnz" secondAttribute="bottom" constant="102" id="D7T-uq-6Il"/>
+                            <constraint firstItem="cAz-wW-7BY" firstAttribute="top" secondItem="uov-Mk-Pnz" secondAttribute="bottom" constant="20" id="DDq-YS-T7s"/>
+                            <constraint firstItem="uov-Mk-Pnz" firstAttribute="top" secondItem="idr-gu-mMj" secondAttribute="bottom" id="DQx-Yd-Idq"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="nA4-eX-Aax" secondAttribute="trailing" id="FX3-GA-dIE"/>
+                            <constraint firstItem="nA4-eX-Aax" firstAttribute="centerY" secondItem="cAz-wW-7BY" secondAttribute="centerY" id="SqL-9Z-ipt"/>
+                            <constraint firstItem="uov-Mk-Pnz" firstAttribute="trailing" secondItem="idr-gu-mMj" secondAttribute="trailing" id="Tgr-wj-N4q"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="nA4-eX-Aax" secondAttribute="bottom" constant="20" id="Y6I-Jz-Ymq"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="cAz-wW-7BY" secondAttribute="bottom" constant="40" id="Ykq-rw-nNK"/>
+                            <constraint firstItem="DnJ-fq-8kZ" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="fgW-Ct-NxB"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="idr-gu-mMj" secondAttribute="trailing" id="gji-YM-c29"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="cAz-wW-7BY" secondAttribute="bottom" constant="209.5" id="lXX-Ww-W0V"/>
+                            <constraint firstItem="idr-gu-mMj" firstAttribute="top" secondItem="DnJ-fq-8kZ" secondAttribute="bottom" constant="30" id="pNa-Nx-G0T"/>
+                            <constraint firstItem="idr-gu-mMj" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" constant="-60" id="qkP-nw-rw4"/>
+                            <constraint firstItem="nA4-eX-Aax" firstAttribute="leading" secondItem="cAz-wW-7BY" secondAttribute="trailing" constant="20" id="qot-PX-g2R"/>
+                            <constraint firstAttribute="leadingMargin" secondItem="idr-gu-mMj" secondAttribute="leading" id="vGr-Z4-tLi"/>
+                            <constraint firstAttribute="leadingMargin" secondItem="cAz-wW-7BY" secondAttribute="leading" id="wmf-u5-qVz"/>
+                            <constraint firstItem="idr-gu-mMj" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" constant="-100" id="xua-ei-Iox"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="pNa-Nx-G0T"/>
+                                <exclude reference="xua-ei-Iox"/>
+                                <exclude reference="DQx-Yd-Idq"/>
+                                <exclude reference="D7T-uq-6Il"/>
+                                <exclude reference="7fH-vW-3f5"/>
+                                <exclude reference="8Ho-Fg-w4U"/>
+                                <exclude reference="Ykq-rw-nNK"/>
+                                <exclude reference="lXX-Ww-W0V"/>
+                            </mask>
+                        </variation>
                     </view>
+                    <simulatedStatusBarMetrics key="simulatedStatusBarMetrics" statusBarStyle="lightContent"/>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+                    <connections>
+                        <outlet property="logoButton" destination="DnJ-fq-8kZ" id="xQO-63-OB4"/>
+                        <outlet property="playButton" destination="nA4-eX-Aax" id="rLB-Bf-1IX"/>
+                        <outlet property="streamLabel" destination="cAz-wW-7BY" id="RTC-H9-5vg"/>
+                        <outlet property="trackLabel" destination="idr-gu-mMj" id="tXa-9C-VFa"/>
+                        <outlet property="trackSlider" destination="uov-Mk-Pnz" id="URu-QB-dMf"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="280" y="349"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="EBM" width="155" height="161"/>
+        <image name="Play-50" width="50" height="50"/>
+    </resources>
 </document>
