track meta, trying to animate waveform

--- a/ebmRadio-ios/Base.lproj/Main.storyboard
+++ b/ebmRadio-ios/Base.lproj/Main.storyboard
@@ -16,11 +16,15 @@
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RnA-aY-5OO" customClass="WaveformView" customModule="ebmRadio_ios" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="466" width="768" height="452"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                            </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nA4-eX-Aax">
-                                <rect key="frame" x="309" y="597" width="50" height="50"/>
+                                <rect key="frame" x="698" y="954" width="50" height="50"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="nA4-eX-Aax" secondAttribute="height" multiplier="1:1" id="gzj-Wp-WlY"/>
                                     <constraint firstAttribute="width" constant="50" id="hdD-ME-V4C"/>
@@ -30,27 +34,27 @@
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="deutsch amerikanische freundschaft - der mussolini" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="idr-gu-mMj">
-                                <rect key="frame" x="16" y="235" width="343" height="76.5"/>
-                                <fontDescription key="fontDescription" type="system" weight="light" pointSize="32"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="deutsch amerikanische freundschaft" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="idr-gu-mMj">
+                                <rect key="frame" x="20" y="422" width="728" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="uov-Mk-Pnz">
-                                <rect key="frame" x="14" y="561" width="347" height="31"/>
+                                <rect key="frame" x="18" y="918" width="732" height="31"/>
                                 <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <color key="minimumTrackTintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <color key="maximumTrackTintColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                 <color key="thumbTintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </slider>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="320 kbps, streaming" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cAz-wW-7BY">
-                                <rect key="frame" x="16" y="611" width="273" height="20.5"/>
+                                <rect key="frame" x="20" y="968" width="658" height="20.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DnJ-fq-8kZ">
-                                <rect key="frame" x="163" y="40" width="48" height="50"/>
+                                <rect key="frame" x="360" y="40" width="48" height="50"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="DnJ-fq-8kZ" secondAttribute="height" multiplier="26:27" id="kes-80-F8F"/>
                                     <constraint firstAttribute="height" constant="50" id="uYT-DZ-q7p"/>
@@ -58,6 +62,12 @@
                                 <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <state key="normal" title="Button" image="EBM"/>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Liebe Auf Den Ersten Blick" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wyh-hF-SUC">
+                                <rect key="frame" x="20" y="463" width="728" height="38.5"/>
+                                <fontDescription key="fontDescription" type="system" weight="light" pointSize="32"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -69,23 +79,33 @@
                             <constraint firstItem="cAz-wW-7BY" firstAttribute="top" secondItem="uov-Mk-Pnz" secondAttribute="bottom" constant="20" id="DDq-YS-T7s"/>
                             <constraint firstItem="uov-Mk-Pnz" firstAttribute="top" secondItem="idr-gu-mMj" secondAttribute="bottom" id="DQx-Yd-Idq"/>
                             <constraint firstAttribute="trailingMargin" secondItem="nA4-eX-Aax" secondAttribute="trailing" id="FX3-GA-dIE"/>
+                            <constraint firstItem="wyh-hF-SUC" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="KwQ-qW-m76"/>
+                            <constraint firstItem="wyh-hF-SUC" firstAttribute="top" secondItem="idr-gu-mMj" secondAttribute="bottom" constant="20" id="Ptu-RL-d8y"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="wyh-hF-SUC" secondAttribute="trailing" id="QrS-Mb-AHU"/>
+                            <constraint firstAttribute="trailing" secondItem="RnA-aY-5OO" secondAttribute="trailing" id="RJC-jE-BVK"/>
                             <constraint firstItem="nA4-eX-Aax" firstAttribute="centerY" secondItem="cAz-wW-7BY" secondAttribute="centerY" id="SqL-9Z-ipt"/>
                             <constraint firstItem="uov-Mk-Pnz" firstAttribute="trailing" secondItem="idr-gu-mMj" secondAttribute="trailing" id="Tgr-wj-N4q"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="nA4-eX-Aax" secondAttribute="bottom" constant="20" id="Y6I-Jz-Ymq"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="cAz-wW-7BY" secondAttribute="bottom" constant="40" id="Ykq-rw-nNK"/>
+                            <constraint firstItem="wyh-hF-SUC" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="csU-Nc-zMF"/>
+                            <constraint firstItem="RnA-aY-5OO" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="eBI-rq-V0F"/>
                             <constraint firstItem="DnJ-fq-8kZ" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="fgW-Ct-NxB"/>
                             <constraint firstAttribute="trailingMargin" secondItem="idr-gu-mMj" secondAttribute="trailing" id="gji-YM-c29"/>
+                            <constraint firstItem="wyh-hF-SUC" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" constant="-30" id="i9Q-pO-pvm"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="cAz-wW-7BY" secondAttribute="bottom" constant="209.5" id="lXX-Ww-W0V"/>
                             <constraint firstItem="idr-gu-mMj" firstAttribute="top" secondItem="DnJ-fq-8kZ" secondAttribute="bottom" constant="30" id="pNa-Nx-G0T"/>
                             <constraint firstItem="idr-gu-mMj" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" constant="-60" id="qkP-nw-rw4"/>
                             <constraint firstItem="nA4-eX-Aax" firstAttribute="leading" secondItem="cAz-wW-7BY" secondAttribute="trailing" constant="20" id="qot-PX-g2R"/>
                             <constraint firstAttribute="leadingMargin" secondItem="idr-gu-mMj" secondAttribute="leading" id="vGr-Z4-tLi"/>
+                            <constraint firstItem="uov-Mk-Pnz" firstAttribute="top" secondItem="RnA-aY-5OO" secondAttribute="bottom" id="van-un-Zwd"/>
                             <constraint firstAttribute="leadingMargin" secondItem="cAz-wW-7BY" secondAttribute="leading" id="wmf-u5-qVz"/>
                             <constraint firstItem="idr-gu-mMj" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" constant="-100" id="xua-ei-Iox"/>
+                            <constraint firstItem="RnA-aY-5OO" firstAttribute="top" secondItem="wyh-hF-SUC" secondAttribute="bottom" constant="-35.5" id="xvc-H5-dUx"/>
                         </constraints>
                         <variation key="default">
                             <mask key="constraints">
                                 <exclude reference="pNa-Nx-G0T"/>
+                                <exclude reference="qkP-nw-rw4"/>
                                 <exclude reference="xua-ei-Iox"/>
                                 <exclude reference="DQx-Yd-Idq"/>
                                 <exclude reference="D7T-uq-6Il"/>
@@ -96,19 +116,20 @@
                             </mask>
                         </variation>
                     </view>
-                    <simulatedStatusBarMetrics key="simulatedStatusBarMetrics" statusBarStyle="lightContent"/>
-                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="iPad"/>
                     <connections>
                         <outlet property="logoButton" destination="DnJ-fq-8kZ" id="xQO-63-OB4"/>
                         <outlet property="playButton" destination="nA4-eX-Aax" id="rLB-Bf-1IX"/>
                         <outlet property="streamLabel" destination="cAz-wW-7BY" id="RTC-H9-5vg"/>
-                        <outlet property="trackLabel" destination="idr-gu-mMj" id="tXa-9C-VFa"/>
+                        <outlet property="trackArtistLabel" destination="idr-gu-mMj" id="ERh-0J-5kY"/>
                         <outlet property="trackSlider" destination="uov-Mk-Pnz" id="URu-QB-dMf"/>
+                        <outlet property="trackTitleLabel" destination="wyh-hF-SUC" id="Js9-hF-Ii7"/>
+                        <outlet property="waveformView" destination="RnA-aY-5OO" id="XzB-q1-mHF"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="280" y="349"/>
+            <point key="canvasLocation" x="279" y="348"/>
         </scene>
     </scenes>
     <resources>
