--- a/ebmRadio-ios/Base.lproj/Main.storyboard
+++ b/ebmRadio-ios/Base.lproj/Main.storyboard
@@ -64,7 +64,7 @@
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="EUA-mJ-ADW" customClass="FSFrequencyPlotView">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="EUA-mJ-ADW" customClass="FrequencyPlotView" customModule="ebmRadio_ios" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="501.5" width="768" height="420"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                             </view>
