--- a/ebmRadio-ios/Base.lproj/Main.storyboard
+++ b/ebmRadio-ios/Base.lproj/Main.storyboard
@@ -1,10 +1,11 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--Player View Controller-->
@@ -16,117 +17,95 @@
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nA4-eX-Aax">
-                                <rect key="frame" x="716" y="964" width="32" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="nA4-eX-Aax" secondAttribute="height" multiplier="4:5" id="1zM-K2-nbr"/>
                                     <constraint firstAttribute="height" constant="40" id="aUM-ab-POC"/>
                                 </constraints>
-                                <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <state key="normal" image="play">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="deutsch amerikanische freundschaft" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="idr-gu-mMj">
-                                <rect key="frame" x="20" y="419" width="728" height="24"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="uov-Mk-Pnz">
-                                <rect key="frame" x="18" y="921.5" width="732" height="31"/>
-                                <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <color key="minimumTrackTintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <color key="maximumTrackTintColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
-                                <color key="thumbTintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                            </slider>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="320 kbps, streaming" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cAz-wW-7BY">
-                                <rect key="frame" x="20" y="971.5" width="676" height="24"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="press play to start" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cAz-wW-7BY">
                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DnJ-fq-8kZ">
-                                <rect key="frame" x="360" y="40" width="48" height="50"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="DnJ-fq-8kZ" secondAttribute="height" multiplier="26:27" id="kes-80-F8F"/>
                                     <constraint firstAttribute="height" constant="50" id="uYT-DZ-q7p"/>
                                 </constraints>
-                                <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <state key="normal" title="Button" image="B10580F9-CC0B-4508-8C1A-D1C4913CBF2B"/>
+                                <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <state key="normal" title="Button" image="EBM"/>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Liebe Auf Den Ersten Blick" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wyh-hF-SUC">
-                                <rect key="frame" x="20" y="463" width="728" height="38.5"/>
                                 <fontDescription key="fontDescription" type="system" weight="light" pointSize="32"/>
-                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="EUA-mJ-ADW" customClass="FrequencyPlotView" customModule="ebmRadio_ios" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="501.5" width="768" height="400"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                             </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aVF-Oh-vgk" customClass="MPVolumeView">
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="fea-61-qCB"/>
+                                </constraints>
+                            </view>
                         </subviews>
-                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="DnJ-fq-8kZ" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="20" id="5IJ-h1-pQ6"/>
-                            <constraint firstItem="uov-Mk-Pnz" firstAttribute="leading" secondItem="idr-gu-mMj" secondAttribute="leading" id="BWt-kj-h2T"/>
-                            <constraint firstItem="cAz-wW-7BY" firstAttribute="top" secondItem="uov-Mk-Pnz" secondAttribute="bottom" constant="20" id="DDq-YS-T7s"/>
+                            <constraint firstItem="nA4-eX-Aax" firstAttribute="top" secondItem="aVF-Oh-vgk" secondAttribute="bottom" constant="20" id="8k3-Dz-paC"/>
+                            <constraint firstItem="aVF-Oh-vgk" firstAttribute="top" secondItem="EUA-mJ-ADW" secondAttribute="bottom" constant="20" id="DXb-Kx-qg9"/>
                             <constraint firstAttribute="trailingMargin" secondItem="nA4-eX-Aax" secondAttribute="trailing" id="FX3-GA-dIE"/>
-                            <constraint firstItem="uov-Mk-Pnz" firstAttribute="top" secondItem="EUA-mJ-ADW" secondAttribute="bottom" constant="20" id="GVj-oC-KiE"/>
                             <constraint firstItem="wyh-hF-SUC" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="KwQ-qW-m76"/>
                             <constraint firstItem="EUA-mJ-ADW" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="Lgz-9r-zxU"/>
                             <constraint firstAttribute="trailing" secondItem="EUA-mJ-ADW" secondAttribute="trailing" id="Lid-25-aRO"/>
                             <constraint firstItem="wyh-hF-SUC" firstAttribute="top" secondItem="idr-gu-mMj" secondAttribute="bottom" constant="20" id="Ptu-RL-d8y"/>
                             <constraint firstAttribute="trailingMargin" secondItem="wyh-hF-SUC" secondAttribute="trailing" id="QrS-Mb-AHU"/>
                             <constraint firstItem="nA4-eX-Aax" firstAttribute="centerY" secondItem="cAz-wW-7BY" secondAttribute="centerY" id="SqL-9Z-ipt"/>
-                            <constraint firstItem="uov-Mk-Pnz" firstAttribute="trailing" secondItem="idr-gu-mMj" secondAttribute="trailing" id="Tgr-wj-N4q"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="nA4-eX-Aax" secondAttribute="bottom" constant="20" id="Y6I-Jz-Ymq"/>
                             <constraint firstItem="wyh-hF-SUC" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="csU-Nc-zMF"/>
                             <constraint firstItem="DnJ-fq-8kZ" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="fgW-Ct-NxB"/>
                             <constraint firstAttribute="trailingMargin" secondItem="idr-gu-mMj" secondAttribute="trailing" id="gji-YM-c29"/>
                             <constraint firstItem="wyh-hF-SUC" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" constant="-30" id="i9Q-pO-pvm"/>
+                            <constraint firstItem="aVF-Oh-vgk" firstAttribute="trailing" secondItem="idr-gu-mMj" secondAttribute="trailing" id="pRE-oE-QIv"/>
                             <constraint firstItem="nA4-eX-Aax" firstAttribute="leading" secondItem="cAz-wW-7BY" secondAttribute="trailing" constant="20" id="qot-PX-g2R"/>
                             <constraint firstAttribute="leadingMargin" secondItem="idr-gu-mMj" secondAttribute="leading" id="vGr-Z4-tLi"/>
                             <constraint firstAttribute="leadingMargin" secondItem="cAz-wW-7BY" secondAttribute="leading" id="wmf-u5-qVz"/>
+                            <constraint firstItem="aVF-Oh-vgk" firstAttribute="leading" secondItem="idr-gu-mMj" secondAttribute="leading" id="yRZ-0r-kLY"/>
                             <constraint firstItem="EUA-mJ-ADW" firstAttribute="top" secondItem="wyh-hF-SUC" secondAttribute="bottom" id="zuw-90-cLS"/>
                         </constraints>
                     </view>
-                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="iPad"/>
                     <connections>
                         <outlet property="frequencyPlotView" destination="EUA-mJ-ADW" id="gX5-UV-BxF"/>
                         <outlet property="logoButton" destination="DnJ-fq-8kZ" id="xQO-63-OB4"/>
+                        <outlet property="logoButtonTopSpace" destination="5IJ-h1-pQ6" id="FqK-C1-tH6"/>
                         <outlet property="playButton" destination="nA4-eX-Aax" id="rLB-Bf-1IX"/>
                         <outlet property="streamLabel" destination="cAz-wW-7BY" id="RTC-H9-5vg"/>
                         <outlet property="trackArtistLabel" destination="idr-gu-mMj" id="ERh-0J-5kY"/>
-                        <outlet property="trackSlider" destination="uov-Mk-Pnz" id="URu-QB-dMf"/>
                         <outlet property="trackTitleLabel" destination="wyh-hF-SUC" id="Js9-hF-Ii7"/>
+                        <outlet property="volumeSlider" destination="aVF-Oh-vgk" id="WpF-gl-C7h"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="317" y="274"/>
+            <point key="canvasLocation" x="316" y="273.91304347826087"/>
         </scene>
     </scenes>
     <resources>
-        <image name="B10580F9-CC0B-4508-8C1A-D1C4913CBF2B" width="155" height="161">
-            <mutableData key="keyedArchiveRepresentation">
-YnBsaXN0MDDUAQIDBAUGOzxYJHZlcnNpb25YJG9iamVjdHNZJGFyY2hpdmVyVCR0b3ASAAGGoK0HCBMU
-GR4fJSYsLzU4VSRudWxs1QkKCwwNDg8QERJWTlNTaXplViRjbGFzc1xOU0ltYWdlRmxhZ3NWTlNSZXBz
-V05TQ29sb3KAAoAMEiTAAACAA4AKWnsxNTUsIDE2MX3SFQoWGFpOUy5vYmplY3RzoReABIAJ0hUKGhii
-GxyABYAGgAkQBdMgCiEiIyRXTlMuYmFzZVtOUy5yZWxhdGl2ZYAAgAiAB18QfGZpbGU6Ly8vQXBwbGlj
-YXRpb25zL1hjb2RlLmFwcC9Db250ZW50cy9QbHVnSW5zL0lERUludGVyZmFjZUJ1aWxkZXJLaXQuaWRl
-cGx1Z2luL0NvbnRlbnRzL1Jlc291cmNlcy9JQk1pc3NpbmdJbWFnZUdseXBoLnRpZmbSJygpKlokY2xh
-c3NuYW1lWCRjbGFzc2VzVU5TVVJMoikrWE5TT2JqZWN00icoLS5XTlNBcnJheaItK9MwMQoyMzRXTlNX
-aGl0ZVxOU0NvbG9yU3BhY2VEMCAwABADgAvSJyg2N1dOU0NvbG9yojYr0icoOTpXTlNJbWFnZaI5K18Q
-D05TS2V5ZWRBcmNoaXZlctE9PlRyb290gAEACAARABoAIwAtADIANwBFAEsAVgBdAGQAcQB4AIAAggCE
-AIkAiwCNAJgAnQCoAKoArACuALMAtgC4ALoAvAC+AMUAzQDZANsA3QDfAV4BYwFuAXcBfQGAAYkBjgGW
-AZkBoAGoAbUBugG8Ab4BwwHLAc4B0wHbAd4B8AHzAfgAAAAAAAACAQAAAAAAAAA/AAAAAAAAAAAAAAAA
-AAAB+g
-</mutableData>
-        </image>
+        <image name="EBM" width="155" height="161"/>
         <image name="play" width="43" height="50"/>
     </resources>
 </document>
